# RenderFor3Data

./: .gitignore  CMakeLists.txt  README.md
RenderFor3Data/: CMakeLists.txt  ImageDataset.cpp  ImageDataset.h  __init__.py  blender_helper.py  image_dataset.py  smpl_helper.py  stdout_redirector.py
cmake/: CompileSettings.cmake  Config.h.cmake  FindEigen.cmake
cpp_tools/: CMakeLists.txt  demoViewPoint.cpp  generateKittiSyntheticDataset.cpp  generateMultiObjectRandomDataset.cpp  renderSingleImageInfo.cpp  visualizeKittiSyntheticViewpoints.cpp  visualizeMutiObjectRandomViewpoints.cpp  visualizePLYwithViewpoint.cpp  visualizeRandomViewpoints.cpp  visualizeSingleImageInfo.cpp
data/: GT3DModels_cars.txt  ShapeNetCore_v1_clean_cars.txt  cars_shape_files_obj.txt  cars_shape_files_ply.txt
data/example_image_infos/: Allocentric.json  Egocentric.json  smpl_view_3p.json
py_tools/: combine_imageset.py  composite_synthetic_kitti_bkg.py  composite_with_random_bkg.py  find_missing_rendereings.py  rescale_model_to_unit_diagonal.py  split_image_dataset.py  split_image_dataset_to_image_infos.py  transform_model.py
render_scripts/: render_moshed_smpl.py  render_mutiple_image_infos.py  render_obj_from_viewpoint.py  render_single_image_info.py  render_smpl.py  render_smpl_image_infos.py  render_smpl_single_image_info.py  render_smpl_surreal.py  run_multi_image_render_pipeline.py  run_single_image_render_pipeline.py
scripts/: blender_geometry_tests.py  camera_calibration_test.py  convert_3ds_to_obj.py  create_custom_image_info.py  create_egocentric_vs_allocentric_image_infos.py  find_missing_rendereings.py  prettify_image_dataset.py  render_obj_from_viewpoint.py  render_single_image_info.py  rescale_model_to_unit_diagonal.py  run_camera_calibration_test.sh  run_render_pipeline.py  run_render_single_image_info.sh  split_image_dataset_to_image_infos.py
tests/: camera_calibration_test.py  test_smpl_render.py
